Fix prediction wrap bug

--- a/src/next-boat/directive/PredictionsDirective.css
+++ b/src/next-boat/directive/PredictionsDirective.css
@@ -48,7 +48,7 @@ ul.predictions ul li
 {
 	color: #FFCC00;
 	font-family: 'bpdotsunicasesquarelight', Helvetica;
-	font-size: 20pt;
+	font-size: 18pt;
 	font-weight: normal;
 	border-top: 2px solid #202020;
 	border-left: 2px solid #202020;
